hphp/test/slow/lang/this_in_static.php.expectf
Fatal error: Don't use $this in a static method, use static:: instead in %s on line 6